--- a/advancedgames.ballpit.website/css/ballpit.website.play.css
+++ b/advancedgames.ballpit.website/css/ballpit.website.play.css
@@ -1,61 +1,69 @@
- @media screen and (max-width: 380px), screen and (max-height: 640px) {
+@media screen {
 	#bp-container {
-		width: 36.5%;
+		width: 36.07%;
 		height: 100%;
 
+		bottom: 0;
+		left: 50%;
+			
+		position: absolute;
+		-ms-transform: translateX(-50%);
+		-webkit-transform:  translateX(-50%) ;	
+		-moz-transform:  translateX(-50%);
+		transform:  translateX(-50%);
+	}
+
+	#bp-holder {
+		width: 64.98%; 
+		height: 84.32%;
+
+		margin-left: 17.6%;
+		margin-top: 9.1%;
+	}
+}
+
+#bp-holder canvas {
+	width: 100% !important; 
+	height: 100% !important;
+}
+ 
+@media screen and (max-width: 380px), screen and (max-height: 640px) {
+	#bp-container {
 		top: 50%;
 		left: 50%;
-		
+			
 		position: absolute;
 		-ms-transform: translateX(-50%) translateY(-50%);
 		-webkit-transform:  translateX(-50%) translateY(-50%);	
 		-moz-transform:  translateX(-50%) translateY(-50%);
 		transform:  translateX(-50%) translateY(-50%);
 
-		box-sizing: border-box;
-		-moz-box-sizing: border-box;
-		-webkit-box-sizing: border-box;
-
-		background-color: #6A7C6C;
-		border: #2A2F33 solid 50px;
+		background-color: #2A2F33;
 	}
 
 	#bp-holder {
-		-ms-transform: translateX(-2.5%) translateY(-10%);
-		-webkit-transform:  translateX(-2.5%) translateY(-10%);
-		-moz-transform:  translateX(-2.5%) translateY(-10%);
-		transform:  translateX(-2.5%) translateY(-10%);
+		background-color: #000000;
 	}
  }
 
-@media screen and (min-width: 380px) and (min-height: 640px) {
+@media screen and (min-width: 381px) and (max-height: 675px) { 
+	#bp-container {
+		bottom:  -11%;
+	}
+} 
+
+@media screen and (min-width: 381px) and (min-height: 676px) and (max-height: 708px) { 
+	#bp-container {
+		bottom:  -5%;
+	}
+} 
+
+@media screen and (min-width: 381px) and (min-height: 641px) {
 	#bp-container {
 		min-width: 554px;
 		min-height: 759px;
 
-		width: 36.5%;
-		height: 100%;
-
-		top: 50%;
-		left: 50%;
-		
-		position: absolute;
-		-ms-transform: translateX(-50%) translateY(-50%);
-		-webkit-transform:  translateX(-50%) translateY(-50%);	
-		-moz-transform:  translateX(-50%) translateY(-50%);
-		transform:  translateX(-50%) translateY(-50%);
-
 		background: url("../images/asset_game_board.png") no-repeat;
-		background-size: contain;
-	}
-
-	#bp-holder {
-		max-width: 360px; 
-		max-height: 642px;
-
-		-ms-transform: translateX(27.2%) translateY(7.9%);
-		-webkit-transform:  translateX(27.2%) translateY(7.9%);	
-		-moz-transform:  translateX(27.2%) translateY(7.9%);
-		transform:  translateX(27.2%) translateY(7.9%);
+		background-size: 100% 100%;
 	}
 }
