--- a/advancedgames.ballpit.website/css/sportsworld.theme.css
+++ b/advancedgames.ballpit.website/css/sportsworld.theme.css
@@ -13,7 +13,7 @@
 
 	#sw-grass-bg {
 		width: 100%;
-		height: 206px;
+		height: 27.14%;
 		
 		bottom: 0;
 		position: absolute;
@@ -23,7 +23,7 @@
 
 	#sw-grass-fg {
 		width: 100%;
-		height: 137px;
+		height: 18.05%;
 
 		bottom: 0;
 		position: absolute;
@@ -32,7 +32,7 @@
 	}
  }
 
-@media screen and (min-width: 380px) and (min-height: 640px) {
+@media screen and (min-width: 381px) and (min-height: 641px) {
 	#sw-container {
 		overflow: hidden;
 		position: relative;
@@ -100,7 +100,7 @@
 	}
 
 	#sw-building-bowling {
-		width: 351px;
+		width: 355px;
 		height: 543px;
 
 		bottom: 80px;
@@ -151,20 +151,23 @@
 	}
 
 	.sw-cloud.i1{
-		width: 343px;
-		height: 59px;
+		width: 22.33%;
+		height: 7.77%;
 		background: url("../images/asset_cloud_1.png") no-repeat;
+		background-size: 100% 100%;
 	}
 
 	.sw-cloud.i2{
-		width: 226px;
-		height: 35px;
+		width: 14.71%;
+		height: 4.61%;
 		background: url("../images/asset_cloud_2.png") no-repeat;
+		background-size: 100% 100%;
 	}
 
 	.sw-cloud.i3{
-		width: 218px;
-		height: 28px;
+		width: 14.19%;
+		height: 3.69%;
 		background: url("../images/asset_cloud_3.png") no-repeat;
+		background-size: 100% 100%;
 	}
 }
