--- a/advancedgames.ballpit.game/fonts/fonts.css
+++ b/advancedgames.ballpit.game/fonts/fonts.css
@@ -1,59 +1,49 @@
 @font-face {
-    font-family: 'comfortaa';
-    src: url('../fonts/comfortaa-regular.eot');
-    src: url('../fonts/comfortaa-regular.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/comfortaa-regular.woff2') format('woff2'),
-         url('../fonts/comfortaa-regular.ttf') format('truetype');
+    font-family: 'djb-bbi';
+    src: url('../fonts/djb-belly-button-innie.eot');
+    src: url('../fonts/djb-belly-button-innie.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/djb-belly-button-innie.woff2') format('woff2'),
+         url('../fonts/djb-belly-button-innie.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
-    font-family: 'comfortaa';
-    src: url('../fonts/comfortaa-bold.eot');
-    src: url('../fonts/comfortaa-bold.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/comfortaa-bold.woff2') format('woff2'),
-         url('../fonts/comfortaa-bold.ttf') format('truetype');
-    font-weight: bold;
-    font-style: bold;
-}
-
-@font-face {
-    font-family: 'comfortaa';
-    src: url('.../fonts/comfortaa-light.eot');
-    src: url('../fonts/comfortaa-light.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/comfortaa-light.woff2') format('woff2'),
-         url('../fonts/comfortaa-light.ttf') format('truetype');
-    font-weight: light;
-    font-style: light;
-}
-
-@font-face {
-    font-family: 'dsdigi';
-    src: url('../fonts/dsdigi-regular.eot');
-    src: url('../fonts/dsdigi-regular.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/dsdigi-regular.woff2') format('woff2'),
-         url('../fonts/dsdigi-regular.ttf') format('truetype');
+    font-family: 'digital-7';
+    src: url('../fonts/digital-7.eot');
+    src: url('../fonts/digital-7.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/digital-7.woff2') format('woff2'),
+         url('../fonts/digital-7.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
-    font-family: 'dsdigi';
-    src: url('../fonts/dsdigi-bold.eot');
-    src: url('../fonts/dsdigi-bold.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/dsdigi-bold.woff2') format('woff2'),
-         url('../fonts/dsdigi-bold.ttf') format('truetype');
-    font-weight: bold;
-    font-style: bold;
+    font-family: 'digital-7';
+    src: url('../fonts/digital-7-italic.eot');
+    src: url('../fonts/digital-7-italic.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/digital-7-italic.woff2') format('woff2'),
+         url('../fonts/digital-7-italic.ttf') format('truetype');
+    font-weight: italic;
+    font-style: italic;
 }
 
 @font-face {
-    font-family: 'dsdigi';
-    src: url('../fonts/dsdigi-italic.eot');
-    src: url('../fonts/dsdigi-italic.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/dsdigi-italic.woff2') format('woff2'),
-         url('../fonts/dsdigi-italic.ttf') format('truetype');
+    font-family: 'digital-7-mono';
+    src: url('../fonts/digital-7-mono.eot');
+    src: url('../fonts/digital-7-mono.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/digital-7-mono.woff2') format('woff2'),
+         url('../fonts/digital-7-mono.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'digital-7-monoitalic';
+    src: url('../fonts/digital-7-monoitalic.eot');
+    src: url('../fonts/digital-7-monoitalic.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/digital-7-monoitalic.woff2') format('woff2'),
+         url('../fonts/digital-7-monoitalic.ttf') format('truetype');
     font-weight: italic;
     font-style: italic;
 }
